# MatrixMultiplication

./: .gitignore  README.md
MatrixMultiplication_ABAP/: README.md
MatrixMultiplication_C/: MatrixMultiplication_C.sln  README.md
MatrixMultiplication_C++/: MatrixMultiplication.cpp  MatrixMultiplication.sln  MatrixMultiplication.vcxproj.filters
MatrixMultiplication_CUDA/: MatrixMult.cu  matrixMultiplikation_CUDA.sln
MatrixMultiplication_Common_Lisp/: mmul.lisp
MatrixMultiplication_Exec/: README.md
MatrixMultiplication_F#/: Program.fs  README.md  matrix.fsproj
MatrixMultiplication_Go/: main.go
MatrixMultiplication_Java/: Main.java
MatrixMultiplication_JavaScript/: index.js
MatrixMultiplication_Julia/: README.md  matrix_mult.jl  setenv.bat  setenv.ps1
MatrixMultiplication_Kotlin/: Matrix.kt
MatrixMultiplication_Lua/: matrixmul.lua
MatrixMultiplication_OpenCL/: CMakeLists.txt  FormatInfoVSCode.txt  readme.txt  sourcelist.cmake
MatrixMultiplication_OpenCL/include/: matmul.hpp
MatrixMultiplication_OpenCL/src/: main.cpp  matmul.cpp
MatrixMultiplication_OpenCL/src/kernels/: matmul.cl
MatrixMultiplication_PHP/: README.md  multiplication.php
MatrixMultiplication_Pascal/: matmul.pp
MatrixMultiplication_PowerShell/: MatrixMultiplication.ps1  MatrixMultiplication_CS.ps1  README.md
MatrixMultiplication_Python/: Matrix.py  Matrixmult.py  temp.txt
MatrixMultiplication_Rust/: Cargo.toml
MatrixMultiplication_SIMD/: Matrix.h  MatrixMultiplication.cpp
MatrixMultiplication_SQLite/: matmul.py
MatrixMultiplication_XSLT/: README.md  matmul.xsl  (+1 more)
(+99 files in other folders)
